# mephi-3-lab2

./: AlphabeticalIndex.h  CMakeLists.txt  DynamicArray.h  HashTable.h  IDictionary.h  SparseArray.h  ThinArray.h  alpa.cpp  hash_table.h  menu.cpp  tests.cpp
ui/: server.py
ui/static/styles/: style.css
ui/templates/: menu.html
